force-app/main/default/objects/Reference_Application__c/fields/Application_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_End_Date__c</fullName>
    <label>Application End Date</label>
    <type>Date</type>
</CustomField>