force-app/main/default/objects/Reference_Application__c/fields/Application_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Open_Date__c</fullName>
    <label>Application Open Date</label>
    <type>Date</type>
</CustomField>