force-app/main/default/objects/Reference_Application__c/fields/Portal_isActive__c.field-meta.xml
<CustomField>
    <fullName>Portal_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Application will show on portal under the related Program.</description>
    <label>Portal isActive</label>
    <type>Checkbox</type>
</CustomField>