force-app/main/default/objects/Reference_Application__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Reference Applications</relationshipLabel>
    <relationshipName>Reference_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>